[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Cells/cell_base.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Requests/torque_request.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/torque_cell.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 179.3

[node name="torque_cell" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="torque_request" parent="cell_requests" index="0" instance=ExtResource( 2 )]

[node name="torque_area" type="Area2D" parent="." index="3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="torque_area" index="0"]
shape = SubResource( 1 )

[connection signal="body_entered" from="torque_area" to="." method="_on_torque_area_body_entered"]
[connection signal="body_exited" from="torque_area" to="." method="_on_torque_area_body_exited"]
